@@ -1,1 +1,15 @@
 
+[ERROR] Failed to execute goal org.apache.cxf:cxf-codegen-plugin:3.3.5:wsdl2java (generate-sources) on project camel-iib-pre-approved-offer-v1: 
+[ERROR] Exit code: 1
+[ERROR] Command line was: cmd.exe /X /C "C:\Users\t769118\DevTools\BHS\2.0.0\java\java-11-openjdk-11.0.5.10-2.windows.redhat.x86_64\bin\java.exe --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED -jar C:\Users\t769118\AppData\Local\Temp\cxf-tmp-571783585335719764\cxf-codegen343438753322852622.jar C:\Users\t769118\AppData\Local\Temp\cxf-tmp-571783585335719764\cxf-w2j1207848150396809799args"
+[ERROR] 
+[ERROR] 
+[ERROR] -> [Help 1]
+[ERROR] 
+[ERROR] To see the full stack trace of the errors, re-run Maven with the -e switch.
+[ERROR] Re-run Maven using the -X switch to enable full debug logging.
+[ERROR] 
+[ERROR] For more information about the errors and possible solutions, please read the following articles:
+[ERROR] [Help 1] http://cwiki.apache.org/confluence/display/MAVEN/MojoExecutionException
+
+Process finished with exit code 1
